--- a/210962148/Lab 9/Main.ipynb
+++ b/210962148/Lab 9/Main.ipynb
@@ -100,7 +100,8 @@
     "    return dist\n",
     "def man(x1,x2,a,b):\n",
     "    dist = np.abs(x1-a) + np.abs(x2-b)\n",
-    "    return dist"
+    "    return dist\n",
+    "def me"
    ]
   },
   {
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -140,18 +141,20 @@
       "Using EUC when K = 3\n",
       "BAD\n",
       "Using EUC when K = 4\n",
-      "Can't be determined\n"
+      "Can't be determined\n",
+      "Using EUC when K = 5\n",
+      "Good\n"
      ]
     }
    ],
    "source": [
-    "k = [2,3,4]\n",
+    "k = [2,3,4,5]\n",
     "start = [3,7]\n",
     "d = []\n",
     "for j in k:\n",
     "    d.clear()\n",
     "    for i in range(10):\n",
-    "        a = man(x1[i],x2[i],start[0],start[1])\n",
+    "        a = euc(x1[i],x2[i],start[0],start[1])\n",
     "        d.append((a,df['Y'][i]))\n",
     "        \n",
     "    d.sort()\n",
@@ -163,25 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 'Bad'),\n",
-       " (2, 'Good'),\n",
-       " (3, 'Bad'),\n",
-       " (3, 'Good'),\n",
-       " (4, 'Bad'),\n",
-       " (5, 'Bad'),\n",
-       " (5, 'Good'),\n",
-       " (6, 'Bad'),\n",
-       " (6, 'Good'),\n",
-       " (7, 'Bad')]"
+       "[(36.22154055254967, 'Good'),\n",
+       " (37.33630940518894, 'Bad'),\n",
+       " (38.2099463490856, 'Bad'),\n",
+       " (38.3275357934736, 'Bad'),\n",
+       " (39.01281840626232, 'Bad'),\n",
+       " (40.0, 'Good'),\n",
+       " (40.01249804748511, 'Bad'),\n",
+       " (41.0, 'Good'),\n",
+       " (41.048751503547585, 'Good'),\n",
+       " (41.19465984809196, 'Bad')]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
